# nrl

./: README.md
service/: .env  .golangci.yml  Cargo.toml  Dockerfile  docker-compose.yml  docker.sh  go.mod  go.sum  package-lock.json  package.json  taskfile.yml  tsconfig.json
service/cmd/nrl/: main.go  settings.go
service/config/: custom-environment-variables.json  default.json
service/crates/testdatabase/: Cargo.toml
service/crates/testdatabase/src/: lib.rs  seeddata.rs  testdatabase.rs
service/docker/: start.sh
service/internal/database/: .gitignore  database.go  health.go  health_test.go  migrate_test.go
service/internal/health/: config.go  model.go  model_test.go  service.go  service_test.go
service/internal/health/config/: config.go
service/internal/health/handlers/: get.go  handler.go  model.go
service/internal/infrastructure/database/: database.go  health.go  health_test.go  migrate.go  migrate_test.go  query.go
service/internal/infrastructure/health/: healthchecker.go  model_test.go  service.go  service_test.go
service/internal/infrastructure/server/: config.go
service/internal/infrastructure/service/: service.go
service/internal/server/: config.go  server.go  test.go
service/internal/service/: service.go  test.go
service/internal/users/: model.go  usecases.go
service/internal/users/config/: config.go
service/internal/users/service/: config.go  repository.go  service.go
service/internal/users/sql/: find.go  find_test.go  get.go  get_test.go  model.go  repository.go
service/migrations/: 000002-usersTable.sql
service/src/: authentication.rs  authorization.rs  fake.test.ts  http.rs  index.ts  infrastructure.rs  lib.rs  logger.ts  main.rs  model.rs  testing.rs  users.rs
service/src/authentication/: config.rs  endpoints.rs  google.rs  model.rs  repository.rs  service.rs  usecases.rs
service/src/authentication/endpoints/: complete.rs  list.rs  start.rs
service/src/authentication/google/: authenticator.rs  complete.rs  config.rs  start.rs
service/src/authentication/model/: authenticator.rs  authenticator_id.rs  registry.rs
service/src/authentication/service/: complete.rs  list.rs  registry.rs  start.rs
service/src/authorization/: authorizer.rs  config.rs  http.rs  model.rs  service.rs  usecases.rs
service/src/authorization/http/: authorizer.rs  problem.rs  security_context.rs  signed_security_context.rs
service/src/authorization/service/: authorize.rs  claims.rs  generate.rs  signing_key.rs
service/src/http/: page.rs
service/src/http/problem/: types.rs
service/src/infrastructure/: database.rs  health.rs  server.rs  service.rs  testing.rs
service/src/infrastructure/database/: database.ts  health.rs  postgres.rs  testing.rs
service/src/infrastructure/health/: config.rs  config.ts  healthchecker.ts  index.ts  model.rs  model.ts  service.rs  service.test.ts  service.ts  usecases.rs  (+1 more)
service/src/integration/: health.spec.ts  testDatabase.ts  testService.ts
service/src/testing/: database.rs
service/src/users/: config.rs  endpoints.rs  model.rs  repository.rs  service.rs  usecases.rs
service/tests/: nrl.rs  testserver.rs  testservice.go
service/tests/data/: user.go
service/tests/database/: database.go
service/tests/health/: health_test.go
service/tests/testdatabase/: database.go  seed.go  seeddata.go
service/tests/tests/: authentication.rs  health.rs  users.rs
service/tests/testserver/: mod.rs  server.rs  testserver.rs
service/tests/testservice/: database.go  testservice.go
(+67 files in other folders)
