[package]
name = "nrl"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "nrl_lib"

[[bin]]
name = "nrl"

[dependencies]
actix-cors = "0.4.1"
actix-http = "2.0.0"
actix-rt = "1.1.1"
actix-web = "3.1.0"
config = "0.10.1"
dotenv = "0.15.0"
futures = "0.3.6"
log = "0.4.11"
serde = { version = "1.0.116", features = ["derive"] }
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.12"
