[package]
name = "nrl"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "nrl_lib"

[[bin]]
name = "nrl"

[dependencies]
actix-cors = "0.4.1"
actix-http = "2.0.0"
actix-rt = "1.1.1"
actix-web = "3.1.0"
async-trait = "0.1.41"
bytes = "0.5.6"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.10.1"
deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
dotenv = "0.15.0"
futures = "0.3.6"
log = "0.4.11"
rust-embed = "5.6.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = { version = "1.0.58", features = ["preserve_order"] }
thiserror = "1.0.21"
tokio-postgres = "0.5.5"
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.12"

[dev-dependencies]
assert2 = "0.3.3"
insta = {version = "1.0.0", features=["redactions"] }
testcontainers = "0.11.0"
lazy_static = "1.4.0"
