[package]
name = "nrl"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[lib]
name = "nrl_lib"

[[bin]]
name = "nrl"

[dependencies]
actix-cors = "0.4.1"
actix-http = "2.0.0"
actix-rt = "1.1.1"
actix-web = "3.1.0"
async-trait = "0.1.41"
bytes = "0.5.6"
chrono = { version = "0.4.19", features = ["serde"] }
config = "0.10.1"
deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
dotenv = "0.15.0"
futures = "0.3.6"
jsonwebtoken = "7.2.0"
log = "0.4.11"
postgres-types = { version = "0.1.2", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
rust-embed = "5.6.0"
serde = { version = "1.0.116", features = ["derive"] }
serde_json = { version = "1.0.58", features = ["preserve_order"] }
thiserror = "1.0.21"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.21"
tracing-futures = "0.2.4"
tracing-log = "0.1.1"
tracing-subscriber = "0.2.12"
uuid = {version = "0.8.1", features = ["v4", "serde"] }
uritemplate = "0.1.2"
reqwest = "0.10.8"

[dev-dependencies]
assert2 = "0.3.3"
insta = {version = "1.0.0", features=["redactions"] }

nrl_testdatabase = { path = "crates/testdatabase" }
