[package]
name = "nrl_testdatabase"
version = "0.1.0"
authors = ["Graham Cox <graham@grahamcox.co.uk>"]
edition = "2018"

[dependencies]
async-trait = "0.1.41"
chrono = { version = "0.4.19", features = ["serde"] }
deadpool = "0.5.2"
deadpool-postgres = "0.5.6"
postgres-types = { version = "0.1.2", features = ["derive", "with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = { version = "1.0.58", features = ["preserve_order"] }
testcontainers = "0.11.0"
tokio-postgres = { version = "0.5.5", features = ["with-uuid-0_8", "with-chrono-0_4", "with-serde_json-1"] }
tracing = "0.1.21"
lazy_static = "1.4.0"
uuid = {version = "0.8.1", features = ["v4", "serde"] }
